--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} - Theme by <a href="https://github.com/rastersize/BlogTheme">Rastersize</a>, 
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
