--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,4 @@
 <ul class="main-navigation">
-  <li><a href="{{ root_url }}/About">About</a></li>
+  <li><a href="{{ root_url }}/about">About</a></li>
   <li><a href="{{ root_url }}/blog/archives">Posts</a></li>
 </ul>
