--- a/css/marciovm.css
+++ b/css/marciovm.css
@@ -1,27 +1,7 @@
 body {
-    font-family: 'Signika', serif;
+    font-family: 'Muli', 'light';
     background-color: #f4f4eb
 }
-
-.book-cover {
-    text-align: center;
-    margin-top: 3em;
-}
-
-h1,h2,h3,h4,h5,h6 {
-    text-rendering: optimizeLegibility;
-    font-weight: normal;
-}
-
-h1 {
-    font-size: 58px;
-    line-height: 80px;
-}
-
-.small {
-    font-size: 18px;
-}
-
 .divider {
     margin: 0 auto;
     margin-bottom: 1em;
@@ -37,9 +17,49 @@ a,a:hover {
 }
 
 .container-fluid {
-  font-family: 'Open Sans', serif;
   max-width: 730px;
 	margin-right: auto;
   margin-left: auto;
 }
 
+.fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-github {
+  background: black;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-quora {
+  background: #bb0000;
+  color: white;
+}
